After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 596226 - fix compilation on OpenBSD
fix compilation on OpenBSD
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other OpenBSD
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-09-24 19:13 UTC by Jasper Lievisse Adriaanse
Modified: 2015-02-07 17:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix build on openbsd (434 bytes, patch)
2009-09-24 19:13 UTC, Jasper Lievisse Adriaanse
none Details | Review
Fix build on OpenBSD (996 bytes, patch)
2009-12-02 12:39 UTC, Johan (not receiving bugmail) Dahlin
committed Details | Review

Description Jasper Lievisse Adriaanse 2009-09-24 19:13:36 UTC
Created attachment 143934 [details] [review]
fix build on openbsd

Due to a missing header, gobject-introspection fails to compile on OpenBSD.
And only due to headers-including-headers practice this doesn't blow up on many
other platforms.

Patch attached.
Comment 1 Johan (not receiving bugmail) Dahlin 2009-12-02 12:39:32 UTC
The following fix has been pushed:
402ca58 Fix build on OpenBSD
Comment 2 Johan (not receiving bugmail) Dahlin 2009-12-02 12:39:36 UTC
Created attachment 148897 [details] [review]
Fix build on OpenBSD

Due to a missing header, gobject-introspection fails to compile on OpenBSD.
And only due to headers-including-headers practice this doesn't blow up on
many other platforms.
Comment 3 André Klapper 2015-02-07 17:00:04 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]